# simple-napari-cci-annotator

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: test_and_deploy.yml
src/simple_napari_cci_annotator/: __init__.py  _widget.py  _yolo_utils.py  napari.yaml
src/simple_napari_cci_annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_plugin.py
